--- a/src/main/resources/com/example/egyptian_league_management_system/choice.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/choice.fxml
@@ -4,24 +4,31 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="scene2anchorpane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl3.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.ChoiceController">
-   <children>
+<AnchorPane id="scene2anchorpane" prefHeight="400.0" prefWidth="600.0"
+            style="-fx-background-image: url('epl6.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;"
+            xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.egyptian_league_management_system.ChoiceController">
+   <Button alignment="CENTER" layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick"
+           prefHeight="26.0" prefWidth="66.0" styleClass="button-73" text="Home" wrapText="true">
+      <font>
+         <Font size="10.0"/>
+      </font>
+   </Button>
 
-      <Button alignment="CENTER" layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-73" text="Home" wrapText="true">
-         <font>
-            <Font size="10.0" />
-         </font></Button>
-
-      <Button alignment="CENTER" layoutX="303.0" layoutY="340.0" mnemonicParsing="false" onAction="#onMatchesClick" prefHeight="38.0" prefWidth="126.0" styleClass="button-73" text="MATCHES" textAlignment="CENTER" wrapText="true">
-         <font>
-            <Font size="17.0" />
-         </font></Button>
+   <Button alignment="CENTER" layoutX="303.0" layoutY="340.0" mnemonicParsing="false" onAction="#onMatchesClick"
+           prefHeight="38.0" prefWidth="126.0" styleClass="button-73" text="MATCHES" textAlignment="CENTER"
+           wrapText="true">
+      <font>
+         <Font size="17.0"/>
+      </font>
+   </Button>
 
 
-      <Button alignment="CENTER" layoutX="154.0" layoutY="340.0" mnemonicParsing="false" onAction="#onTeamsClick" prefHeight="38.0" prefWidth="126.0" styleClass="button-73" text="TEAMS" textAlignment="CENTER">
-         <font>
-            <Font size="17.0" />
-         </font></Button>
+   <Button alignment="CENTER" layoutX="154.0" layoutY="340.0" mnemonicParsing="false" onAction="#onTeamsClick"
+           prefHeight="38.0" prefWidth="126.0" styleClass="button-73" text="TEAMS" textAlignment="CENTER">
+      <font>
+         <Font size="17.0"/>
+      </font>
+   </Button>
 
-   </children>
 </AnchorPane>
