--- a/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size:stretch ;       -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.WelcomePageController">
 
-    <Button fx:id="startBtn" alignment="CENTER" layoutX="237.0" layoutY="348.0" onAction="#startBtnClick" prefHeight="38.0" prefWidth="125.0" styleClass="button-73" text="Start" wrapText="true">
+    <Button  fx:id="startBtn" alignment="CENTER" layoutX="237.0" layoutY="348.0" onAction="#startBtnClick" prefHeight="38.0" prefWidth="125.0" styleClass="cssbuttons" text="Start" wrapText="true">
       <font>
          <Font size="17.0" />
       </font></Button>
