--- a/src/main/resources/com/example/egyptian_league_management_system/Styles.css
+++ b/src/main/resources/com/example/egyptian_league_management_system/Styles.css
@@ -1,5 +1,5 @@
 .button-73 {
-    -fx-background-color: #FFFFFF;
+    -fx-background-color: #DBDBDB;
     -fx-background-radius: 40em;
     -fx-border-style: none;
     -fx-effect: dropshadow(gaussian, rgba(173,207,255,1), 10, 0, 0, -6);
