--- a/src/main/resources/com/example/egyptian_league_management_system/Styles.css
+++ b/src/main/resources/com/example/egyptian_league_management_system/Styles.css
@@ -6,7 +6,7 @@
     -fx-text-fill: linear-gradient(to bottom, #ff3333, #090202); /* Text color gradient */
     -fx-cursor: hand;
     -fx-font-family: "System Bold Italic"; /* Font family */
-    -fx-font-size: 17.0px; /* Font size */
+    -fx-font-size: 18.0px; /* Font size */
     -fx-font-weight: bold; /* Font weight */
     -fx-padding: 0.5em 1em; /* Adjust padding for better visual balance */
     -fx-text-alignment: center;
@@ -19,3 +19,35 @@
     -fx-background-color: #d4f2f5; /* Light cyan */
     -fx-effect: innershadow(gaussian, rgba(255,99,20,1), 8, 0, 0, 0);
 }
+
+
+
+.button-7 {
+    -fx-background-color: #9bcad1;
+    -fx-background-radius: 40em;
+    -fx-border-style: none;
+    -fx-effect: dropshadow(gaussian, rgba(173,207,255,1), 10, 0, 0, -6);
+    -fx-text-fill: linear-gradient(to bottom, #ff3333, #090202); /* Text color gradient */
+    -fx-cursor: hand;
+    -fx-font-family: "System Bold Italic"; /* Font family */
+    -fx-font-size: 12.0px; /* Font size */
+    -fx-font-weight: bold; /* Font weight */
+    -fx-padding: 0.5em 1em; /* Adjust padding for better visual balance */
+    -fx-text-alignment: center;
+    -fx-text-decoration: none;
+    -fx-wrap-text: true; /* Enable text wrapping */
+    -fx-content-display: center; /* Align text content to the center */
+}
+
+.button-7:hover {
+    -fx-background-color: #d4f2f5; /* Light cyan */
+    -fx-effect: innershadow(gaussian, rgba(255,99,20,1), 8, 0, 0, 0);
+}
+
+
+
+
+
+
+
+
