--- a/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
@@ -2,14 +2,10 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl6.jpg'); -fx-background-size:stretch ;       -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.WelcomePageController">
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size:stretch ;       -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.WelcomePageController">
+    <Button fx:id="startBtn" alignment="CENTER" layoutX="218.0" layoutY="348.0" onAction="#startBtnClick" text="START" wrapText="true"    prefHeight="38.0" prefWidth="126.0" styleClass="button-73"   />
 
-    <Button  fx:id="startBtn" alignment="CENTER" layoutX="237.0" layoutY="348.0" onAction="#startBtnClick" prefHeight="38.0" prefWidth="125.0" styleClass="button-73" text="Start" wrapText="true">
-      <font>
-         <Font size="17.0" />
-      </font></Button>
 
 
 </AnchorPane>
