--- a/src/main/resources/com/example/egyptian_league_management_system/player.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/player.fxml
@@ -7,7 +7,7 @@
 <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl6.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.PlayerController">
 
 
-   <AnchorPane layoutX="61.0" layoutY="41.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="480.0" style="-fx-background-color: #303030;">
+   <AnchorPane layoutX="62.0" layoutY="39.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="480.0" style="-fx-background-color: #303030;" styleClass="button-73">
       <Label contentDisplay="CENTER" layoutX="56.0" layoutY="36.0" prefHeight="60.0" prefWidth="112.0" text="Name" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Agency FB Bold" size="48.0" />
