--- a/src/main/resources/com/example/egyptian_league_management_system/match.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/match.fxml
@@ -2,43 +2,13 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl6.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.MatchController">
-
-
-    <AnchorPane layoutX="52.0" layoutY="44.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="505.0" style="-fx-background-color: #303030;" styleClass="button-73">
-        <Label contentDisplay="CENTER" layoutX="56.0" layoutY="36.0" prefHeight="60.0" prefWidth="112.0" text="Team1" textAlignment="CENTER" textFill="WHITE">
-            <font>
-                <Font name="Agency FB Bold" size="48.0" />
-            </font>
-        </Label>
-        <Label layoutX="56.0" layoutY="149.0" prefHeight="42.0" prefWidth="112.0" text="Referee   :" textFill="WHITE">
-            <font>
-                <Font name="Agency FB" size="24.0" />
-            </font>
-        </Label>
-        <Label layoutX="56.0" layoutY="107.0" prefHeight="42.0" prefWidth="112.0" text="score   :" textFill="WHITE">
-            <font>
-                <Font name="Agency FB" size="24.0" />
-            </font>
-        </Label>
-        <Label layoutX="186.0" layoutY="191.0" prefHeight="42.0" prefWidth="133.0" text="Stadium   :" textFill="WHITE">
-            <font>
-                <Font name="Agency FB" size="24.0" />
-            </font>
-        </Label>
-        <Label layoutX="345.0" layoutY="37.0" prefHeight="42.0" prefWidth="112.0" text="Team2" textFill="WHITE">
-            <font>
-                <Font name="Agency FB Bold" size="48.0" />
-            </font>
-        </Label>
-        <Label layoutX="221.0" layoutY="56.0" text="Date" textFill="WHITE">
-           <font>
-               <Font name="System Bold" size="24.0" />
-           </font>
-        </Label>
-    </AnchorPane>
-
+    <ScrollPane fx:id="scrollPane" prefHeight="400.0" prefWidth="600.0">
+        <AnchorPane fx:id="parentAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0">
+            <!-- Dynamic panes will be added here by the controller -->
+        </AnchorPane>
+    </ScrollPane>
     <Button alignment="CENTER" layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 </AnchorPane>
