--- a/src/main/resources/com/example/egyptian_league_management_system/player.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/player.fxml
@@ -2,47 +2,12 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl6.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.PlayerController">
-
-
-   <AnchorPane layoutX="62.0" layoutY="39.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="480.0" style="-fx-background-color: #303030;" styleClass="button-73">
-      <Label contentDisplay="CENTER" layoutX="56.0" layoutY="36.0" prefHeight="60.0" prefWidth="112.0" text="Name" textAlignment="CENTER" textFill="WHITE">
-         <font>
-            <Font name="Agency FB Bold" size="48.0" />
-         </font>
-      </Label>
-      <Label layoutX="56.0" layoutY="106.0" prefHeight="42.0" prefWidth="112.0" text="Team  :" textFill="WHITE">
-         <font>
-            <Font name="Agency FB" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="56.0" layoutY="146.0" prefHeight="42.0" prefWidth="112.0" text="Age   :" textFill="WHITE">
-         <font>
-            <Font name="Agency FB" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="56.0" layoutY="188.0" prefHeight="42.0" prefWidth="133.0" text="Position  :" textFill="WHITE">
-         <font>
-            <Font name="Agency FB" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="281.0" layoutY="110.0" text="Rank :" textFill="WHITE">
-         <font>
-            <Font name="Agency FB" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="281.0" layoutY="150.0" prefHeight="31.0" prefWidth="56.0" text="Score :" textFill="WHITE">
-         <font>
-            <Font name="Agency FB" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="281.0" layoutY="192.0" text="Number :" textFill="WHITE">
-         <font>
-            <Font name="Agency FB" size="24.0" />
-         </font>
-      </Label>
-   </AnchorPane>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl6.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.PlayerController">
+   <ScrollPane fx:id="scrollPane"  prefHeight="400.0" prefWidth="600.0" fitToWidth="true" fitToHeight="true">
+      <VBox fx:id="vbox" alignment="TOP_CENTER" spacing="10">
+         <!-- Dynamic panes will be added here by the controller -->
+      </VBox>
+   </ScrollPane>
    <Button alignment="CENTER" layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 </AnchorPane>
