--- a/src/main/resources/com/example/egyptian_league_management_system/match.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/match.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl6.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.MatchController">
-    <ScrollPane fx:id="scrollPane" prefHeight="400.0" prefWidth="600.0">
-        <VBox fx:id="vbox" alignment="CENTER" spacing="10" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.MatchController">
+    <ScrollPane  fx:id="scrollPane" prefHeight="400.0" prefWidth="600.0">
+        <VBox  style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" fx:id="vbox" alignment="CENTER" spacing="10" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0">
             <!-- Dynamic panes will be added here by the controller -->
         </VBox>
     </ScrollPane>
