--- a/src/main/resources/com/example/egyptian_league_management_system/PlayerPane.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/PlayerPane.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="244.0" prefWidth="480.0" style="-fx-background-color: #303030;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="244.0" prefWidth="480.0" style="-fx-background-color: #303030;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="labelName" layoutX="56.0" layoutY="36.0" prefHeight="60.0" prefWidth="112.0" style="-fx-text-fill: white;" text="Player Name">
+        <Label fx:id="labelName" layoutX="56.0" layoutY="36.0" prefHeight="70.0" prefWidth="404.0" style="-fx-text-fill: white;" text="Player Name">
             <font>
                 <Font name="Agency FB Bold" size="48.0" />
             </font>
