--- a/src/main/resources/com/example/egyptian_league_management_system/insert.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/insert.fxml
@@ -5,36 +5,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="414.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.InsertController">
-
-    <Button alignment="CENTER" layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
-
-    <Label alignment="CENTER" layoutX="7.0" layoutY="17.0" prefHeight="39.0" prefWidth="283.0" text="Add New Player" wrapText="true">
-        <font>
-            <Font name="System Bold Italic" size="27.0" />
-        </font>
-        <textFill>
-            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
-                <stops>
-                    <Stop>
-                        <color>
-                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
-                        </color>
-                    </Stop>
-                    <Stop offset="0.4178082191780822">
-                        <color>
-                            <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                    </Stop>
-                    <Stop offset="1.0">
-                        <color>
-                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
-                        </color>
-                    </Stop>
-                </stops>
-            </LinearGradient>
-        </textFill>
-    </Label>
+<AnchorPane prefHeight="414.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.InsertController">
    <AnchorPane layoutX="297.0" layoutY="14.0" prefHeight="393.0" prefWidth="283.0">
       <children>
           <Label alignment="CENTER" layoutX="4.0" layoutY="8.0" prefHeight="39.0" prefWidth="291.0" text="Add New Team" wrapText="true">
@@ -257,200 +228,5 @@
             </textFill>
          </Label>
       </children></AnchorPane>
-   <TextField layoutX="95.0" layoutY="69.0" prefHeight="25.0" prefWidth="173.0" promptText="name" />
-   <TextField layoutX="95.0" layoutY="113.0" prefHeight="25.0" prefWidth="173.0" promptText="number" />
-   <TextField layoutX="95.0" layoutY="155.0" prefHeight="25.0" prefWidth="173.0" promptText="age" />
-   <TextField layoutX="95.0" layoutY="196.0" prefHeight="25.0" prefWidth="173.0" promptText="score" />
-   <TextField layoutX="94.0" layoutY="237.0" prefHeight="25.0" prefWidth="173.0" promptText="rank" />
-    <Label alignment="CENTER" layoutX="8.0" layoutY="62.0" prefHeight="39.0" prefWidth="79.0" text="name" wrapText="true">
-        <font>
-            <Font name="System Bold Italic" size="17.0" />
-        </font>
-        <textFill>
-            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
-                <stops>
-                    <Stop>
-                        <color>
-                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
-                        </color>
-                    </Stop>
-                    <Stop offset="0.4178082191780822">
-                        <color>
-                            <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                    </Stop>
-                    <Stop offset="1.0">
-                        <color>
-                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
-                        </color>
-                    </Stop>
-                </stops>
-            </LinearGradient>
-        </textFill>
-    </Label>
-    <Label alignment="CENTER" layoutX="8.0" layoutY="106.0" prefHeight="39.0" prefWidth="79.0" text="number" wrapText="true">
-        <font>
-            <Font name="System Bold Italic" size="17.0" />
-        </font>
-        <textFill>
-            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
-                <stops>
-                    <Stop>
-                        <color>
-                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
-                        </color>
-                    </Stop>
-                    <Stop offset="0.4178082191780822">
-                        <color>
-                            <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                    </Stop>
-                    <Stop offset="1.0">
-                        <color>
-                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
-                        </color>
-                    </Stop>
-                </stops>
-            </LinearGradient>
-        </textFill>
-    </Label>
-    <Label alignment="CENTER" layoutX="8.0" layoutY="148.0" prefHeight="39.0" prefWidth="79.0" text="age" wrapText="true">
-        <font>
-            <Font name="System Bold Italic" size="17.0" />
-        </font>
-        <textFill>
-            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
-                <stops>
-                    <Stop>
-                        <color>
-                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
-                        </color>
-                    </Stop>
-                    <Stop offset="0.4178082191780822">
-                        <color>
-                            <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                    </Stop>
-                    <Stop offset="1.0">
-                        <color>
-                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
-                        </color>
-                    </Stop>
-                </stops>
-            </LinearGradient>
-        </textFill>
-    </Label>
-    <Label alignment="CENTER" layoutX="8.0" layoutY="189.0" prefHeight="39.0" prefWidth="79.0" text="score" wrapText="true">
-        <font>
-            <Font name="System Bold Italic" size="17.0" />
-        </font>
-        <textFill>
-            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
-                <stops>
-                    <Stop>
-                        <color>
-                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
-                        </color>
-                    </Stop>
-                    <Stop offset="0.4178082191780822">
-                        <color>
-                            <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                    </Stop>
-                    <Stop offset="1.0">
-                        <color>
-                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
-                        </color>
-                    </Stop>
-                </stops>
-            </LinearGradient>
-        </textFill>
-    </Label>
-    <Label alignment="CENTER" layoutX="7.0" layoutY="230.0" prefHeight="39.0" prefWidth="79.0" text="rank" wrapText="true">
-        <font>
-            <Font name="System Bold Italic" size="17.0" />
-        </font>
-        <textFill>
-            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
-                <stops>
-                    <Stop>
-                        <color>
-                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
-                        </color>
-                    </Stop>
-                    <Stop offset="0.4178082191780822">
-                        <color>
-                            <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                    </Stop>
-                    <Stop offset="1.0">
-                        <color>
-                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
-                        </color>
-                    </Stop>
-                </stops>
-            </LinearGradient>
-        </textFill>
-    </Label>
-   <TextField layoutX="95.0" layoutY="281.0" prefHeight="25.0" prefWidth="173.0" promptText="forward, midfielder, etc" />
-   <Label alignment="CENTER" layoutX="8.0" layoutY="274.0" prefHeight="39.0" prefWidth="79.0" text="position" wrapText="true">
-      <font>
-         <Font name="System Bold Italic" size="17.0" />
-      </font>
-      <textFill>
-         <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
-            <stops>
-               <Stop>
-                  <color>
-                     <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
-                  </color>
-               </Stop>
-               <Stop offset="0.4178082191780822">
-                  <color>
-                     <Color red="1.0" green="1.0" blue="1.0" />
-                  </color>
-               </Stop>
-               <Stop offset="1.0">
-                  <color>
-                     <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
-                  </color>
-               </Stop>
-            </stops>
-         </LinearGradient>
-      </textFill>
-   </Label>
-
-    <Button alignment="CENTER" layoutX="119.0" layoutY="353.0" mnemonicParsing="false" onAction="#onAddPlayerClick" prefHeight="38.0" prefWidth="126.0" styleClass="button-73" text="ADD " textAlignment="CENTER" wrapText="true">
-        <font>
-            <Font size="17.0" />
-        </font>
-    </Button>
-   <TextField layoutX="94.0" layoutY="318.0" prefHeight="25.0" prefWidth="173.0" promptText="team" />
-   <Label alignment="CENTER" layoutX="7.0" layoutY="311.0" prefHeight="39.0" prefWidth="79.0" text="team" wrapText="true">
-      <font>
-         <Font name="System Bold Italic" size="17.0" />
-      </font>
-      <textFill>
-         <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
-            <stops>
-               <Stop>
-                  <color>
-                     <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
-                  </color>
-               </Stop>
-               <Stop offset="0.4178082191780822">
-                  <color>
-                     <Color red="1.0" green="1.0" blue="1.0" />
-                  </color>
-               </Stop>
-               <Stop offset="1.0">
-                  <color>
-                     <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
-                  </color>
-               </Stop>
-            </stops>
-         </LinearGradient>
-      </textFill>
-   </Label>
 
 </AnchorPane>
