--- a/src/main/resources/com/example/egyptian_league_management_system/team.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/team.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size:stretch ;       -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.TeamController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size:stretch ;       -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.TeamController">
     <Button alignment="CENTER" layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 
    <Label alignment="CENTER" layoutX="116.0" layoutY="14.0" prefHeight="45.0" prefWidth="368.0" text="Double Click on Team's Logo To Show Their Players" wrapText="true">
@@ -41,7 +41,4 @@
    <ImageView fx:id="team3ImageView" fitHeight="100" fitWidth="100" layoutX="304.0" layoutY="102.0" onMouseClicked="#onImage3Click" />
    <ImageView fx:id="team4ImageView" fitHeight="100" fitWidth="100" layoutX="417.0" layoutY="101.0" onMouseClicked="#onImage4Click" />
    <ImageView fx:id="team5ImageView" fitHeight="100" fitWidth="100" layoutX="78.0" layoutY="213.0" onMouseClicked="#onImage5Click" />
-   <ImageView fx:id="team6ImageView" fitHeight="100" fitWidth="100" layoutX="191.0" layoutY="212.0" onMouseClicked="#onImage6Click" />
-   <ImageView fx:id="team7ImageView" fitHeight="100" fitWidth="100" layoutX="310.0" layoutY="214.0" onMouseClicked="#onImage7Click" />
-   <ImageView fx:id="team8ImageView" fitHeight="100" fitWidth="100" layoutX="423.0" layoutY="213.0" onMouseClicked="#onImage8Click" />
-</AnchorPane>
+  </AnchorPane>
